Fixed table on Firefox

--- a/style.css
+++ b/style.css
@@ -360,8 +360,7 @@ a:target {
 }
 
 table {
-  -webkit-border-horizontal-spacing: 0;
-  -webkit-border-vertical-spacing: 0;
+  border-spacing: 0;
 }
 
 th, td {
